fix: text styling on mobile; bless me webdev gods

--- a/site/assets/prompt/style.css
+++ b/site/assets/prompt/style.css
@@ -1,4 +1,4 @@
-.output-scroll {
+.prompt-output-scroll {
   height: 100%;
   overflow-x: hidden;
   overflow-y: scroll;
@@ -7,15 +7,15 @@
   -webkit-mask-image: -webkit-linear-gradient(bottom, rgba(0,0,0,1) max(15em, 35vh), rgba(0,0,0,0.2) max(25em, 60vh));
 }
 
-.output-scroll::-webkit-scrollbar {
+.prompt-output-scroll::-webkit-scrollbar {
   display: none;
 }
 
-.output-scroll-pad {
+.prompt-output-scroll-pad {
   height: inherit;
 }
 
-.output-cell {
+.prompt-output-cell {
   position: relative;
   font-family: monospace, mono;
   white-space: pre;
@@ -26,50 +26,50 @@
   border-radius: 0.5em;
 }
 
-.input:hover {
+.prompt-input-cell:hover {
   background: var(--gray3);
 }
 
-.input:active {
+.prompt-input-cell:active {
   background: var(--gray2);
 }
 
-.input, .output {
+.prompt-input-cell, .prompt-output-cell {
   background: var(--gray2);
 }
 
-.input .output {
+.prompt-input-cell .prompt-output-cell {
   background: var(--gray0);
   color: var(--fg);
 }
 
-.output {
+.prompt-output-cell {
   text-wrap-mode: wrap;
 }
 
-.error {
+.prompt-error-cell {
   background: color-mix(in lch, #D11 25%, var(--bg));
   color: color-mix(in lch, #D11 25%, var(--fg));
 }
 
-.error a {
+.prompt-error-cell a {
   color: color-mix(in lch, #D11 50%, var(--fg));
 }
 
-.submit {
+.prompt-submit {
   background: #58F;
   color: white;
 }
 
-.submit:hover {
+.prompt-submit:hover {
   background: #69F;
 }
 
-.submit:active {
+.prompt-submit:active {
   background: #7AF;
 }
 
-.clear {
+.prompt-clear {
   background: none;
 }
 
@@ -77,7 +77,7 @@
   position: relative;  
 }
 
-.prompt-input, .prompt-highlight, .prompt-diagnostics {
+.prompt-input-textarea, .prompt-highlight, .prompt-diagnostics {
   box-sizing: border-box;
   font-family: monospace, mono;
   white-space: pre;
@@ -95,10 +95,6 @@
   padding: 1em;
 }
 
-.prompt {
-  margin-top: auto;
-}
-
 .prompt-highlight, .prompt-diagnostics {
   position: absolute;
   top: 0;
@@ -111,7 +107,7 @@
   border-color: transparent;
 }
 
-.prompt-run, .output-share {
+.prompt-run, .prompt-share {
   position: absolute;
   background: var(--fg);
   opacity: 50%;
@@ -126,7 +122,7 @@
 }
 
 @media (hover: hover) {
-  .prompt-run, .output-share {
+  .prompt-run, .prompt-share {
     visibility: hidden;
     opacity: 0%;
   }
@@ -138,7 +134,7 @@
   padding: 1em;
 }
 
-.output-share {
+.prompt-share {
   top: 0.5em;
   right: 0.5em;  
   padding: 0.75em;  
@@ -149,22 +145,22 @@
   mask-image: url("../img/play.svg"); 
 }
 
-.output-share {
+.prompt-share {
   -webkit-mask-image: url("../img/share.svg");
   mask-image: url("../img/share.svg"); 
 }
 
-.prompt-input:hover ~ .prompt-run, .output-cell:hover .output-share {
+.prompt-input-textarea:hover ~ .prompt-run, .prompt-output-cell:hover .prompt-share {
   visibility: visible;
   opacity: 50%;
 }
 
-.prompt-input ~ .prompt-run:hover, .output-cell .output-share:hover {
+.prompt-input-textarea ~ .prompt-run:hover, .prompt-output-cell .prompt-share:hover {
   visibility: visible;
   opacity: 100%;
 }
 
-.prompt-input {
+.prompt-input-textarea {
   position: relative; 
   color: transparent !important;
   caret-color: var(--fg);
@@ -172,14 +168,14 @@
   border-color: transparent !important;
 }
 
-.prompt-input::-webkit-scrollbar {
+.prompt-input-textarea::-webkit-scrollbar {
   display: none;
 }
 
-.prompt-input:focus {
+.prompt-input-textarea:focus {
   outline: 0;
 }
 
-.prompt-input:focus + .prompt-highlight {
+.prompt-input-textarea:focus + .prompt-highlight {
   border-color: var(--gray4);
 }
